@@ -1,3 +1,9 @@
+2017-11-16  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/usb-ccid.c (ccid_thread): Use constant pointer for
+	chopstx_poll.
+	(poll_event_intr): Remove.
+
 2017-11-15  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/usb-ccid.c (usb_event_handle): Allow sleep on suspend.
